# cns_rpi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
config/: config.example.json
docs/: 5G模块拨号验证.md  M7系统化部署设计.md  MAVLink消息清单.md  MQTT命令路由与运行时配置设计.md  OverlayFS只读根文件系统设计.md  STM32与树莓派链路周期通信约定.md  V1设计文档.md  下行飞行控制协议.md  协作规则.md  固件对接-数据格式.md  新设备部署手册.md  本地飞控下发测试工具.md  设备标识符.md
docs/change_history/: 2026-07-03_01_topic寻址与远端状态可扩展性.md
docs/superpowers/plans/: 2026-07-01-m1-project-skeleton.md  2026-07-03-m2-uart-mavlink-link.md  2026-07-03-m3a-telemetry-decode.md  2026-07-06-m3b-extension-decode.md  2026-07-07-m3b-firmware-sync.md  2026-07-07-m3c-identity-decode.md  2026-07-08-m4-json-payload.md  2026-07-09-cellular-dialup.md  2026-07-09-m5-mqtt-publish.md  2026-07-10-mqtt-registration-discovery.md  2026-07-13-mqtt-config-command.md  2026-07-17-local-control-test.md  2026-07-18-mavlink串口自动发现.md  2026-07-18-日志模块实施计划.md  2026-07-22-5g-link-recovery-quality-report.md  2026-07-22-5g单目标复用探测.md  2026-07-22-5g链路延迟与丢包率上报.md
docs/superpowers/specs/: 2026-07-02-m2-uart-mavlink-link-design.md  2026-07-03-m3a-telemetry-decode-design.md  2026-07-06-m3b-extension-decode-design.md  2026-07-07-m3b-firmware-sync-design.md  2026-07-07-m3c-identity-decode-design.md  2026-07-07-m4-json-payload-design.md  2026-07-09-cellular-dialup-design.md  2026-07-09-m5-mqtt-publish-design.md  2026-07-10-mqtt-registration-discovery-design.md  2026-07-17-local-control-test-design.md  2026-07-18-mavlink串口自动发现设计.md  2026-07-18-日志模块设计.md  2026-07-22-5g-link-recovery-quality-report-design.md  2026-07-22-5g链路延迟与丢包率上报设计.md  2026-07-22-启动配置与5G日志可读性设计.md  2026-07-22-飞控命令执行中回执设计.md
docs/technical_docs/: 01_5G模块技术文档.md
scripts/: cellular_dialup.py  cellular_link.py  cns-rpi-apply-config.py  cns-rpi-init-config-volume.sh  cns-rpi-mount-config.sh  deploy.sh  install_deps.sh  test_cellular_dialup.py
src/: main.cpp
src/cellular/: cellular_snapshot.cpp  cellular_snapshot.hpp  cellular_status.cpp  cellular_status.hpp
src/config/: app_config.cpp  app_config.hpp  startup_summary.cpp  startup_summary.hpp
src/config_command/: command_parser.cpp  command_parser.hpp  command_processor.cpp  command_processor.hpp  config_request.cpp  config_request.hpp  config_store.cpp  config_store.hpp  config_updater.cpp  config_updater.hpp
src/control_command/: control_command.cpp  control_command.hpp  control_endpoint.cpp  control_endpoint.hpp  control_transaction.cpp  control_transaction.hpp
src/control_test/: control_test_cli.cpp  control_test_cli.hpp  main.cpp
src/logging/: logger.cpp  logger.hpp
src/mavlink/: mavlink_types.h
src/mqtt/: mqtt_client.cpp  mqtt_client.hpp  topic.cpp  topic.hpp
src/payload/: json_serializer.cpp  json_serializer.hpp
src/platform/: systemd_watchdog.cpp  systemd_watchdog.hpp
src/protocol/: extension_decoder.cpp  extension_decoder.hpp  identity.cpp  identity.hpp  telemetry_decoder.cpp  telemetry_decoder.hpp
src/registration/: registration_payload.cpp  registration_payload.hpp  registration_state.cpp  registration_state.hpp
src/state/: state_store.cpp  state_store.hpp
src/uart/: mavlink_link.cpp  mavlink_link.hpp  mavlink_port_discovery.cpp  mavlink_port_discovery.hpp  serial_port.cpp  serial_port.hpp
systemd/: cellular-dialup.service  cns-rpi-config.service  cns-rpi.service  journald-cns-rpi.conf  swap-cns-rpi.conf
tests/: config_store_helper.cpp  test_app_config.cpp  test_apply_config_helper.py  test_cellular_dialup.py  test_cellular_link.py  test_cellular_snapshot.cpp  test_cellular_status.cpp  test_cns_rpi_service.cpp  test_command_parser.cpp  test_command_processor.cpp  test_config_request.cpp  test_config_store.cpp  test_config_updater.cpp  test_control_command.cpp  test_control_endpoint.cpp  test_control_test_cli.cpp  test_control_transaction.cpp  test_extension_decoder.cpp  test_identity.cpp  test_json_serializer.cpp  test_logger.cpp  test_main_logging_contract.cpp  test_mavlink_link.cpp  test_mavlink_port_discovery.cpp  test_mqtt_client.cpp  test_mqtt_topic.cpp  test_registration_payload.cpp  test_registration_state.cpp  test_startup_summary.cpp  test_state_store.cpp  test_systemd_watchdog.cpp  test_telemetry_decoder.cpp
tests/fixtures/: cpuinfo_with_serial.txt  cpuinfo_without_serial.txt
tools/mavlink_sim/: README.md  receive_frames.py  send_frames.py
